fixed dropdown background z-index

--- a/assets/styles/_dropdown.scss
+++ b/assets/styles/_dropdown.scss
@@ -1,5 +1,6 @@
 .dropdown .background {
   background-color: $backdrop-color;
+  z-index: 100;
 }
 
 .dropdown-menu {
